--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.5",
+    "dotenv": "^16.0.3",
+    "html-webpack-plugin": "^5.5.0",
     "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
