[Resolved] kakao map api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
       "@utils/*": ["utils/*"],
       "@typings/*": ["typings/*"],
       "@themes/*": ["themes/*"],
-    }
+    },
+    "types": [
+      "kakao.maps.d.ts"
+    ]
   }
 }
