--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "fork-ts-checker-webpack-plugin": "^7.2.3",
+    "kakao.maps.d.ts": "^0.1.33",
     "prettier": "^2.2.1",
     "react-refresh": "^0.12.0",
     "style-loader": "^3.2.1",
