--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "^5.5.0",
     "query-string": "^7.1.1",
     "react": "^17.0.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^17.0.1",
     "react-form-hook": "^0.0.1",
     "react-helmet": "^6.1.0",
