--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,8 @@
       "@utils/*": ["utils/*"],
       "@typings/*": ["typings/*"],
       "@themes/*": ["themes/*"],
+      "@contexts/*": ["contexts/*"]
     },
-    "types": [
-      "kakao.maps.d.ts"
-    ]
+    "types": ["kakao.maps.d.ts"]
   }
 }
