--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@loadable/component": "^5.15.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/uuid": "^8.3.4",
+    "@vitejs/plugin-react": "^2.1.0",
     "autosize": "^5.0.1",
     "axios": "^0.26.1",
     "core-js": "^3.15.1",
@@ -37,7 +39,9 @@
     "react-slick": "^0.29.0",
     "regexify-string": "^1.0.19",
     "swr": "^1.3.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
+    "vite": "^3.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
