--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite -p 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest",
