--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
+  "printWidth": 120,
+  "tabWidth": 2,
   "singleQuote": true,
-  "jsxSingleQuote": true,
-  "semi": true,
-  "trailingComma": "es5"
+  "trailingComma": "all",
+  "semi": true
 }
