fix: tsconfig.json, tsc compile 에러 해결
tsconfig.json에  include, references option 위치 변경
MapContext 일부 오류 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,8 @@
       "@themes/*": ["src/themes/*"],
       "@contexts/*": ["src/contexts/*"]
     },
-    "types": ["kakao.maps.d.ts"],
-    "include": ["src"],
-    "references": [{ "path": "./tsconfig.node.json" }]
-  }
+    "types": ["kakao.maps.d.ts"]
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
