--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "autosize": "^5.0.1",
     "axios": "^1.1.3",
+    "eslint-config-prettier": "^8.5.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.0",
     "path": "^0.12.7",
@@ -40,7 +42,14 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@typescript-eslint/parser": "^5.43.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.2.2",
     "kakao.maps.d.ts": "^0.1.33",
     "prettier": "^2.7.1",
