--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.1",
     "react-router-dom": "^6.4.3",
     "regexify-string": "^1.0.19",
     "swr": "^1.3.0",
@@ -40,8 +42,8 @@
     "@types/autosize": "^4.0.1",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "@typescript-eslint/parser": "^5.43.0",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.27.0",
